# myFinances

./: .dockerignore  .gitignore  Dockerfile  README.Docker.md  README.md  compose.yaml  manage.py  pyproject.toml  requirements.txt
myfinances/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
myfinances/static/myfinances/: style.css
myfinances/templates/myfinances/: detail.html  index.html
myproj/: settings.py  urls.py
